<resources>
    <string name="app_name">EasyTimesheet</string>
    <string name="textViewInstruction">Please scan your QR code</string>
    <string name="textViewInstructionOr">Or</string>
    <string name="textViewInstructionQR">Please enter your code</string>
    <string name="signInButtonCode">Enter your code</string>
    <string name="signInButtonQR">Scan QR code</string>
    <string name="codeTyped"></string>
    <string name="adminLoginTitle">Admin Login</string>
    <string name="adminUsername">Username:</string>
    <string name="adminPassword">Password:</string>
    <string name="adminLoginButton">Login</string>
    <string name="adminControlsTitle">Admin</string>
    <string name="adminControlsCurrentEmployees">Current Employees</string>
    <string name="adminControlsNewEmployee">New Employee</string>
    <string name="adminControlsEndOfMonthHours">End-Of-Month Hours</string>
    <string name="adminControlsOptions">Options</string>
    <string name="adminControlCreateEmployee">Create Employee</string>
    <string name="adminControlsCreateEmployeeTitle">Please fill out the following details.</string>
    <string name="adminOptionsTitle">Options</string>
    <string name="adminOptionsTakePhotos">Take photo when signing in? </string>
    <string name="adminOptionsStartOfMonthDay">Day month starts: </string>
    <string name="adminOptionsSave">Save Optiions</string>
    <string name="goButton">Go</string>
    <string name="TestText">TestText</string>
    <string name="employeeListTitle">Current Employees</string>
    <string name="employeeListTotal">Total Employees:</string>
    <string name="employeeListSearch">Search:</string>
    <string name="endOfMonthTitle">End-Of-Month Hours</string>
</resources>
