<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityAdminControls"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/adminControlsTitle"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/buttonCurrentEmployees"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/adminControlsCurrentEmployees"/>

    <Button
        android:id="@+id/buttonNewEmployee"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/adminControlsNewEmployee"/>

    <Button
        android:id="@+id/buttonEndOfMonthHours"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/adminControlsEndOfMonthHours" />

    <Button
        android:id="@+id/buttonOptions"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/adminControlsOptions"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
</LinearLayout>