<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_AdminOptions"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminOptionsTitle"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <Switch
        android:id="@+id/switchTakePhotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/adminOptionsTakePhotos"
        android:textSize="15sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adminOptionsStartOfMonthDay"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/editTextMonthStartDay"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveOptions"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/adminOptionsSave"/>

</LinearLayout>