<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayoutCamera"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="75dp">

        <SurfaceView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cameraPreview"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textViewInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/textViewInstruction"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textViewInstructionOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/textViewInstructionOr"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonChangeSignInMethod"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/signInButtonCode"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textViewStatusUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/TestText"
        android:textSize="30sp"/>

</LinearLayout>